--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -2,5 +2,6 @@
 <resources>
     <string name="app_name">基本介面</string>
     <string name="app_title">行動應用軟體開發課程實例</string>
-    <string name="app_author">楊子青</string>
+    <string name="app_author">胡雯晴</string>
 </resources>
+
